@@ -25,11 +25,13 @@ t/lib/Hello.pm
 t/lib/HelloData.pm
 t/lib/HelloInit.pm
 t/lib/HelloInit2.pm
+t/lib/HelloPrepare.pm
 t/Plack-App-Tags-HTML/01-use.t
 t/Plack-App-Tags-HTML/02-version.t
 t/Plack-App-Tags-HTML/03-app-hello.t
 t/Plack-App-Tags-HTML/04-app-hello-data.t
 t/Plack-App-Tags-HTML/05-app-hello-init.t
 t/Plack-App-Tags-HTML/06-app-hello-inline.t
+t/Plack-App-Tags-HTML/07-app-hello-prepare.t
 xt/Plack-App-Tags-HTML/01-pod_coverage.t
 xt/Plack-App-Tags-HTML/02-pod.t
