@@ -48,6 +48,17 @@ METHODS
             Reference to array with structure for input argument of
             Tags::HTML::init().
 
+            This structure is used in init phase of each web app call.
+
+            Default value is undef.
+
+    *       "data_prepare"
+
+            Reference to array with structure for input argument of
+            Tags::HTML::init().
+
+            This structure is used in init phase of preparation of web app.
+
             Default value is undef.
 
   "to_app"
